set up SafariStudent app and home page UI

--- a/SafariStudent/app/build.gradle
+++ b/SafariStudent/app/build.gradle
@@ -4,11 +4,12 @@ android {
     compileSdkVersion 26
     buildToolsVersion "26.0.0"
     defaultConfig {
-        applicationId "com.ahlab.safariteacher"
+        applicationId "com.ahlab.safaristudent"
         minSdkVersion 19
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
+        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
