--- a/SafariStudent/app/build.gradle
+++ b/SafariStudent/app/build.gradle
@@ -9,7 +9,6 @@ android {
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
@@ -20,8 +19,11 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.google.android.gms:play-services:11.0.2'
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:26.+'
-
+    compile 'com.google.firebase:firebase-database:10.0.1'
+    compile 'me.dm7.barcodescanner:zxing:1.9.4'
 }
+
+
+apply plugin: 'com.google.gms.google-services'
