--- a/SafariTeacher/app/build.gradle
+++ b/SafariTeacher/app/build.gradle
@@ -24,4 +24,8 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:26.+'
+    compile 'com.google.firebase:firebase-database:10.0.1'
 }
+
+
+apply plugin: 'com.google.gms.google-services'
