--- a/SafariTeacher/app/build.gradle
+++ b/SafariTeacher/app/build.gradle
@@ -9,6 +9,7 @@ android {
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
+        vectorDrawables.useSupportLibrary = true
     }
     buildTypes {
         release {
@@ -25,7 +26,11 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:26.+'
     compile 'com.google.firebase:firebase-database:10.0.1'
+    compile 'com.android.support:support-v4:26.+'
+    compile 'com.android.support:support-vector-drawable:26.+'
 }
+
+
 
 
 apply plugin: 'com.google.gms.google-services'
