rendered UI for teacher's mappings page and implemented functionalities as well

--- a/SafariTeacher/app/src/main/AndroidManifest.xml
+++ b/SafariTeacher/app/src/main/AndroidManifest.xml
@@ -33,7 +33,7 @@
             android:screenOrientation="landscape"
             android:theme="@style/Theme.AppCompat"></activity>
         <activity
-            android:name=".ContentLauncher"
+            android:name=".MappingLauncher"
             android:configChanges="orientation|keyboardHidden|screenSize|smallestScreenSize"
             android:theme="@style/Theme.AppCompat"></activity>
         <activity
