--- a/SafariStudent/app/build.gradle
+++ b/SafariStudent/app/build.gradle
@@ -20,9 +20,13 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.android.support:appcompat-v7:26.+'
-    compile 'com.google.firebase:firebase-database:10.0.1'
-    compile 'me.dm7.barcodescanner:zxing:1.9.4'
+    compile 'com.google.firebase:firebase-database:11.0.4'
+    compile 'com.google.android.gms:play-services-vision:11.0.4'
+    compile 'com.shamanland:xdroid-toaster:0.3.0'
+    compile 'com.android.support:support-v4:26.0.0-alpha1'
+    compile 'com.android.support:appcompat-v7:26.0.0-alpha1'
+    compile 'com.android.support:design:26.0.0-alpha1'
+    compile 'com.google.code.gson:gson:2.8.1'
 }
 
 
