--- a/SafariStudent/app/src/main/AndroidManifest.xml
+++ b/SafariStudent/app/src/main/AndroidManifest.xml
@@ -21,6 +21,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".CameraLauncher"
+            android:configChanges="orientation|keyboardHidden|screenSize|smallestScreenSize"
+            android:theme="@style/Theme.AppCompat"/>
 
     </application>
 
